# naviki-gpx-exporter

./: .dockerignore  .env.example  .flake8  .gitignore  .trivyignore  CREDENTIALS_GUIDE.md  DOCKER_QUICKSTART.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-run.sh  naviki-gpx-exporter.py  pyproject.toml  requirements-dev.txt  requirements.txt  security-scan-local.sh  test-docker.sh  test_credentials.py
.github/workflows/: docker.yml  tests.yml
tests/: test_argument_parsing.py  test_integration.py  test_main_function.py  test_parsing.py  test_selenium_auth.py
