[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naviki-gpx-exporter"
version = "0.1.0"
description = "Naviki GPX exporter"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["naviki_gpx_exporter*"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]
